[gd_scene load_steps=30 format=3 uid="uid://b0lh5xscj34ew"]

[ext_resource type="PackedScene" uid="uid://d08pheagteker" path="res://Scenes/Utilities/ColorSwatchPicker/color_swatch_picker.tscn" id="1_af53s"]
[ext_resource type="PackedScene" uid="uid://dkounxxjgekmy" path="res://Scenes/Player/Player.tscn" id="1_ihjlj"]
[ext_resource type="Script" path="res://Scenes/Garage/garage.gd" id="1_jna1t"]
[ext_resource type="FontFile" uid="uid://bj06oub24ay2o" path="res://Assets/Font/Aster.ttf" id="2_ei8vl"]
[ext_resource type="Script" path="res://Scenes/Garage/accent_type_selector.gd" id="3_kw7r4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0efh"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
border_width_bottom = 3
border_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="Theme" id="Theme_4ai3c"]
Label/font_sizes/font_size = 20
Label/styles/normal = SubResource("StyleBoxFlat_w0efh")

[sub_resource type="LabelSettings" id="LabelSettings_oof0n"]
font = ExtResource("2_ei8vl")

[sub_resource type="LabelSettings" id="LabelSettings_frs3n"]
font = ExtResource("2_ei8vl")

[sub_resource type="LabelSettings" id="LabelSettings_pog4x"]
font = ExtResource("2_ei8vl")

[sub_resource type="Theme" id="Theme_yvgr8"]
OptionButton/font_sizes/font_size = 16
OptionButton/fonts/font = ExtResource("2_ei8vl")
PopupMenu/font_sizes/font_separator_size = 16
PopupMenu/font_sizes/font_size = 16
PopupMenu/font_sizes/title_font_size = 16
PopupMenu/fonts/font = ExtResource("2_ei8vl")
PopupMenu/fonts/font_separator = ExtResource("2_ei8vl")
PopupMenu/fonts/title_font = ExtResource("2_ei8vl")

[sub_resource type="LabelSettings" id="LabelSettings_jy7gq"]
font = ExtResource("2_ei8vl")

[sub_resource type="LabelSettings" id="LabelSettings_amw83"]
font = ExtResource("2_ei8vl")

[sub_resource type="LabelSettings" id="LabelSettings_rmqox"]
font = ExtResource("2_ei8vl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q8yns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dso61"]
bg_color = Color(0.2832, 0.431487, 0.59, 1)
border_width_bottom = 5
border_color = Color(0.247059, 0.376471, 0.513726, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1j07a"]
bg_color = Color(0.247059, 0.376471, 0.513726, 1)
border_width_bottom = 5
border_color = Color(0.188235, 0.239216, 0.384314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlq2y"]
bg_color = Color(0.188235, 0.239216, 0.384314, 1)
border_width_top = 2
border_width_bottom = 3
border_color = Color(0.188235, 0.239216, 0.384314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="Theme" id="Theme_dovqk"]
Button/colors/font_color = Color(0.815686, 0.87451, 0.898039, 1)
Button/colors/font_focus_color = Color(0.815686, 0.87451, 0.898039, 1)
Button/colors/font_hover_color = Color(0.815686, 0.87451, 0.898039, 1)
Button/colors/font_hover_pressed_color = Color(0.815686, 0.87451, 0.898039, 1)
Button/colors/font_pressed_color = Color(0.815686, 0.87451, 0.898039, 1)
Button/fonts/font = ExtResource("2_ei8vl")
Button/styles/focus = SubResource("StyleBoxEmpty_q8yns")
Button/styles/hover = SubResource("StyleBoxFlat_dso61")
Button/styles/normal = SubResource("StyleBoxFlat_1j07a")
Button/styles/pressed = SubResource("StyleBoxFlat_vlq2y")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltkbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxjwl"]
bg_color = Color(0.5, 0.335, 0.35425, 1)
border_width_bottom = 5
border_color = Color(0.392157, 0.262745, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74a5j"]
bg_color = Color(0.391862, 0.263122, 0.27855, 1)
border_width_bottom = 5
border_color = Color(0.25, 0.1675, 0.24175, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lwaw"]
bg_color = Color(0.25098, 0.168627, 0.243137, 1)
border_width_top = 2
border_width_bottom = 3
border_color = Color(0.25098, 0.168627, 0.243137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="Theme" id="Theme_m1jm0"]
Button/fonts/font = ExtResource("2_ei8vl")
Button/styles/focus = SubResource("StyleBoxEmpty_ltkbd")
Button/styles/hover = SubResource("StyleBoxFlat_dxjwl")
Button/styles/normal = SubResource("StyleBoxFlat_74a5j")
Button/styles/pressed = SubResource("StyleBoxFlat_6lwaw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5lxq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlvtr"]
bg_color = Color(0.382231, 0.184725, 0.184593, 1)
border_width_bottom = 5
border_color = Color(0.290196, 0.133333, 0.133333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjt65"]
bg_color = Color(0.29, 0.1334, 0.1334, 1)
border_width_bottom = 5
border_color = Color(0.18, 0.0702, 0.0702, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6c0u8"]
bg_color = Color(0.180392, 0.0705882, 0.0705882, 1)
border_width_top = 2
border_width_bottom = 3
border_color = Color(0.180392, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="Theme" id="Theme_lfcxj"]
Button/colors/font_color = Color(1, 0.47, 0.478833, 1)
Button/colors/font_focus_color = Color(1, 0.470588, 0.478431, 1)
Button/colors/font_hover_color = Color(1, 0.470588, 0.478431, 1)
Button/colors/font_hover_pressed_color = Color(1, 0.470588, 0.478431, 1)
Button/colors/font_pressed_color = Color(1, 0.470588, 0.478431, 1)
Button/fonts/font = ExtResource("2_ei8vl")
Button/styles/focus = SubResource("StyleBoxEmpty_a5lxq")
Button/styles/hover = SubResource("StyleBoxFlat_nlvtr")
Button/styles/normal = SubResource("StyleBoxFlat_tjt65")
Button/styles/pressed = SubResource("StyleBoxFlat_6c0u8")

[node name="Garage" type="Node2D"]
script = ExtResource("1_jna1t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -51.0
offset_right = 152.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ei8vl")
theme_override_font_sizes/font_size = 16
text = "Back"

[node name="ShipEditorVH" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 304.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = 272.0
grow_horizontal = 0

[node name="HullLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Hull"
label_settings = SubResource("LabelSettings_oof0n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HullColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 399
Colors = Array[Color]([Color(0.211765, 0.239216, 0.321569, 1), Color(0.129412, 0.145098, 0.196078, 1), Color(0.00392157, 0, 0.121569, 1), Color(0.46, 0.1702, 0.1702, 1), Color(0.58, 0.37903, 0.2146, 1), Color(0.59396, 0.62, 0.2294, 1), Color(0.1924, 0.52, 0.20332, 1), Color(0.1924, 0.37804, 0.52, 1), Color(0.4114, 0.2035, 0.55, 1), Color(1, 1, 1, 1)])
Selected = 4

[node name="CockpitLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Cockpit"
label_settings = SubResource("LabelSettings_frs3n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CockpitColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 929
Colors = Array[Color]([Color(0.00392157, 0, 0.121569, 1), Color(0.129412, 0.145098, 0.196078, 1), Color(0.211765, 0.239216, 0.321569, 1), Color(1, 0.2, 0.266667, 1), Color(0.893333, 1, 0.2, 1), Color(0.2, 1, 0.386667, 1), Color(0.2, 0.545098, 1, 1), Color(1, 1, 1, 1)])

[node name="AccentsLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Accents"
label_settings = SubResource("LabelSettings_pog4x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccentTypeSelector" type="OptionButton" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_yvgr8")
selected = 1
item_count = 4
popup/item_0/text = "None"
popup/item_1/text = "Standard"
popup/item_1/id = 1
popup/item_2/text = "Greeble"
popup/item_2/id = 2
popup/item_3/text = "Hornet"
popup/item_3/id = 3
script = ExtResource("3_kw7r4")

[node name="AccentColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 429
Colors = Array[Color]([Color(0.71, 0.2627, 0.2627, 1), Color(0.83, 0.542405, 0.3071, 1), Color(0.79514, 0.83, 0.3071, 1), Color(0.259, 0.7, 0.2737, 1), Color(0.278431, 0.54902, 0.74902, 1), Color(0.58344, 0.2886, 0.78, 1), Color(0.211765, 0.239216, 0.321569, 1), Color(0.129412, 0.145098, 0.196078, 1), Color(0.00392157, 0, 0.121569, 1)])
Selected = 1

[node name="BlinkersLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Blinkers"
label_settings = SubResource("LabelSettings_jy7gq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlinkerOnColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 9
Colors = Array[Color]([Color(1, 0, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1), Color(0, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 0, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)])

[node name="BlinkerOffColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 9
Colors = Array[Color]([Color(1, 0, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1), Color(0, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 0, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)])
Selected = 7

[node name="BlinkerInterval" type="HSlider" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme_override_constants/center_grabber = 1
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0
tick_count = 45
ticks_on_borders = true

[node name="BlinkerInterp" type="CheckButton" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ei8vl")
theme_override_font_sizes/font_size = 16
text = "Interpolation"

[node name="InlineLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Inline"
label_settings = SubResource("LabelSettings_amw83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InlineColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 469
Colors = Array[Color]([Color(0.00392157, 0, 0.121569, 1), Color(0.129412, 0.145098, 0.196078, 1), Color(0.211765, 0.239216, 0.321569, 1), Color(0.33, 0.1221, 0.1221, 1), Color(0.43, 0.281005, 0.1591, 1), Color(0.4311, 0.45, 0.1665, 1), Color(0.1332, 0.36, 0.14076, 1), Color(0.1443, 0.28353, 0.39, 1), Color(0.28424, 0.1406, 0.38, 1), Color(0.2, 0.545098, 1, 1), Color(1, 1, 1, 1)])
Selected = 4

[node name="OutlineLabel" type="Label" parent="CanvasLayer/Control/ShipEditorVH"]
layout_mode = 2
theme = SubResource("Theme_4ai3c")
text = "Outline
"
label_settings = SubResource("LabelSettings_rmqox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutlineColor" parent="CanvasLayer/Control/ShipEditorVH" instance=ExtResource("1_af53s")]
layout_mode = 2
columns = 9
Colors = Array[Color]([Color(0.2, 0.545098, 1, 1), Color(1, 1, 1, 1), Color(0.00392157, 0, 0.121569, 1)])

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -124.0
offset_right = 192.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="SaveButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_dovqk")
text = "Save"

[node name="DiscardButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m1jm0")
text = "Discard Changes"

[node name="ResetButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lfcxj")
text = "RESET"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(8, 8)

[node name="Player" parent="." instance=ExtResource("1_ihjlj")]
IS_IN_GARAGE = true

[node name="Hull" parent="Player/ShipVisuals" index="0"]
modulate = Color(0.211765, 0.239216, 0.321569, 1)

[node name="Cockpit" parent="Player/ShipVisuals" index="1"]
modulate = Color(0.00392157, 0, 0.121569, 1)

[node name="Accents" parent="Player/ShipVisuals" index="2"]
modulate = Color(0.278431, 0.54902, 0.74902, 1)

[node name="Inline" parent="Player/ShipVisuals" index="3"]
modulate = Color(0.129412, 0.145098, 0.196078, 1)

[node name="Outline" parent="Player/ShipVisuals" index="4"]
modulate = Color(0.2, 0.545098, 1, 1)

[node name="ArmSprite" parent="Player/Manipulator/BaseSprite" index="0"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)

[node name="ArmAccent" parent="Player/Manipulator/BaseSprite/ArmSprite" index="0"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)

[node name="RHSGrabber" parent="Player/Manipulator/BaseSprite/ArmSprite" index="1"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)

[node name="RHSGAccent" parent="Player/Manipulator/BaseSprite/ArmSprite/RHSGrabber" index="0"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)

[node name="LHSGrabber" parent="Player/Manipulator/BaseSprite/ArmSprite" index="2"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)

[node name="LHSGAccent" parent="Player/Manipulator/BaseSprite/ArmSprite/LHSGrabber" index="0"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)

[node name="Extendo" parent="Player/Manipulator/BaseSprite" index="1"]
default_color = Color(0.129412, 0.145098, 0.196078, 1)

[node name="MagnetArea" parent="Player" index="7"]
visible = true
RANGE = 96
FORCE_COEF = 2.0

[node name="Attract" parent="Player/MagnetArea" index="1"]
offset_left = -96.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -80.0
scale = Vector2(12, 12)

[node name="Repel" parent="Player/MagnetArea" index="2"]
offset_left = -96.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -80.0
scale = Vector2(12, 12)

[node name="StasisBay" parent="Player/MagnetArea" index="3"]
offset_left = -96.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -80.0
scale = Vector2(12, 12)

[node name="TractorBay" parent="Player/MagnetArea" index="4"]
offset_left = -96.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -80.0
scale = Vector2(12, 12)

[connection signal="pressed" from="CanvasLayer/Control/Back" to="." method="_on_back_pressed"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/HullColor" to="." method="_on_hull_color_color_changed"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/CockpitColor" to="." method="_on_cockpit_color_color_changed"]
[connection signal="item_selected" from="CanvasLayer/Control/ShipEditorVH/AccentTypeSelector" to="." method="_on_accent_type_selector_item_selected"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/AccentColor" to="." method="_on_accent_color_color_changed"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/BlinkerOnColor" to="." method="_on_blinker_on_color_color_changed"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/BlinkerOffColor" to="." method="_on_blinker_off_color_color_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/ShipEditorVH/BlinkerInterval" to="." method="_on_blinker_interval_value_changed"]
[connection signal="toggled" from="CanvasLayer/Control/ShipEditorVH/BlinkerInterp" to="." method="_on_blinker_interp_toggled"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/InlineColor" to="." method="_on_inline_color_color_changed"]
[connection signal="colorChanged" from="CanvasLayer/Control/ShipEditorVH/OutlineColor" to="." method="_on_outline_color_color_changed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]

[editable path="Player"]
